--- a/exercises/styles/lesson9.css
+++ b/exercises/styles/lesson9.css
@@ -108,12 +108,13 @@
 /* -- */
 
 .perfil {
+  display: inline-block;
   font-family: Arial;
   box-shadow: 0px 0px 4px 2px rgba(0, 0, 0, 0.2);
   padding: 10px;
   height: fit-content;
   width: fit-content;
-  margin-bottom: 20px;
+  margin: 20px 10px;
 }
 
 .salsicha2 {
@@ -122,6 +123,21 @@
   width: 200px;
   height: 200px;
   object-position: 40%;
+}
+
+.bebop {
+  object-fit: cover;
+  margin: -10px -10px 0px -10px;
+  width: 200px;
+  height: 200px;
+}
+
+.caramelo {
+  object-fit: cover;
+  margin: -10px -10px 0px -10px;
+  width: 200px;
+  height: 200px;
+  object-position: 50%;
 }
 
 .usuario {
@@ -143,11 +159,38 @@
   cursor: pointer;
 }
 
-/* -- */
-
 .barra-adicionar {
   display: inline-block;
-  height: fit-content;
+}
+
+/* -- */
+div {
+  text-align: center;
+}
+
+.main {
+  font-family: Arial;
+  margin: 0 auto;
   width: fit-content;
-  
+}
+
+.google {
+  width: 250px;
+  margin: 0px 0px 20px 0px;
+}
+
+.pesquisa {
+  display: block;
+  padding: 10px 200px 10px 20px;
+  margin: 0px 0px 20px 0px;
+  border-radius: 20px;
+  border: none;
+  box-shadow: 0px 0px 5px 2px rgba(0, 0, 0, 0.2);
+}
+
+.button-google {
+  margin: 0px 5px 100px 0px;
+  padding: 10px 20px;
+  background-color: rgb(231, 230, 230);
+  border: none;
 }
