--- a/youtube.css
+++ b/youtube.css
@@ -1,3 +1,8 @@
+p {
+  font-family: Roboto, Arial; /* A segunda fonte que coloquei é uma fonte de emergencia que serve para que por quaisquer razões a primeira fonte não funcione a segunda será usada para substituir*/
+  margin: 0px 0px 0px 0px;
+}
+
 .thumbnail {
   width: 300px;
   display: block;
@@ -8,14 +13,10 @@
 }
 
 .titulo-video {
-  width: 300px;
-}
-
-.autor-video {
-  
-}
-
-.status-video {
+  margin: 0px 0px 12px 0px;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 15px;
 }
 
 .container-video {
@@ -23,4 +24,34 @@
   width: 300px;
   vertical-align: top;
   margin-right: 15px;
+}
+
+.foto-canal {
+  display: inline-block;
+  width: 50px;
+  vertical-align: top;
+}
+
+.informacoes-canal {
+  display: inline-block;
+  width: 200px;
+}
+
+.profile-picture {
+  width: 40px;
+  border-radius: 100%;
+}
+
+.thumbnail-linha {
+  margin: 0px 0px 12px 0px;
+}
+
+.autor-video, 
+.status-video {
+  font-size: 12px;
+  color: rgb(96, 96, 96);
+}
+
+.autor-video {
+  margin-bottom: 4px;
 }
