--- a/exercises/styles/lesson13-2.css
+++ b/exercises/styles/lesson13-2.css
@@ -5,22 +5,43 @@ p {
 
 .main-container {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
+  height: fit-content;
+  width: fit-content;
 }
 
 
 .label-principal {
   display: flex;
   flex-direction: column;
-  background-color: lightpink;
+  box-shadow: 0px 0px 4px 2px rgba(0, 0, 0, 0.15);
   padding: 10px;
+  margin-bottom: 30px;
+}
+
+.inboxes {
+  font-size: 14px;
+  color: rgb(114, 114, 114);
+  padding-bottom: 10px;
+}
+
+.todos-emails {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .label-secundaria {
   display: flex;
   flex-direction: row;
   align-items: center;
-  padding: 5px;
+  padding: 8px 0px;
+}
+
+.info-label {
+  display: flex;
+  flex-direction: column;
 }
 
 .foto-usuario {
@@ -30,19 +51,44 @@ p {
   border-radius: 25px;
 }
 
-.info-label {
-  display: flex;
-  flex-direction: column;
-  padding: 5px;
-}
-
 .label-terciaria {
   display: flex;
   flex-direction: column;
-  justify-content:end;
+}
+
+
+.info1-label {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  padding: 2px 10px;
+}
+
+.email {
+  font-size: 18px;
+  font-weight: bold;
 }
 
 .hora {
-  width: fit-content;
-  height: fit-content;
+  color: rgb(114, 114, 114);
 }
+
+.info2-label {
+  display: flex;
+  flex-direction: column;
+  padding: 0px 10px;
+}
+
+.titulo {
+  font-size: 16px;
+  font-weight: bold;
+  padding-bottom: 2px;
+}
+
+.assunto {
+  font-size: 14px;
+  color: rgb(114, 114, 114);
+}
+
+
