--- a/youtube-clone/styles/main.css
+++ b/youtube-clone/styles/main.css
@@ -5,6 +5,13 @@ p {
 
 body {
   padding-top: 80px;
-  padding-left: 80px;
+  padding-left: 96px;
+  padding-right: 24px;
   margin: 0;
+  background-color: rgb(248, 248, 248);
+}
+
+a {
+  color: inherit; /* Faz que tenha a mesma cor do texto que está inserido*/
+  text-decoration: none;
 }
